Add route-map policy: unbounded argv-triggered routing to N commands
route-args is strictly binary (source vs. one fallback), so there was no
way to route to more than one alternate command from a single shim. This
adds route-map: an ordered list of {match, command, args} routes, each
checked against argv for an exact-token match, falling through to source
when nothing matches. Unlike route-args, the same command can appear in
multiple routes with different fixed args (e.g. a java shim: --v8 runs
java8, --v25 runs java25, --preview also runs java25 but with
--enable-preview baked in).

- New POLICY_ROUTE_MAP + RouteEntry, and array-of-tables parsing
  ([[shims.<name>.routes]] / bare [[routes]] in split files) added to the
  previously single-bracket-only config parser.
- validate_shim_entry rejects zero routes and duplicate (command, args)
  pairs; exposed publicly and now called from add.c's finish_add before
  any disk write, closing a gap where add could otherwise write an
  invalid config that only failed on the next reload.
- CLI: repeatable --route <match>=<command>; per-route args are
  config-file-only (config.toml's args = [...] under a route block).
- Wizard: new route-entry page, auto-skipping the optional fallback page
  like rewrite does.
- doctor: checks each route's command for existence/executable/self-loop.
- Tests: tests/test_route_map.sh (CLI/dispatch), new wizard PTY cases in
  test_add_wizard.py, and config-parser unit coverage for the new
  array-of-tables shape (round-trip + validation errors).
- README: route-map documented alongside the other arg-driven policies;
  0.2.0-ideas.md records prefix/glob matching as a deferred follow-up.

Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_011rqBePxF4nHxSn6LjEWg89